# opengl_course

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Shaders/: 3.3.shader.frag  3.3.shader.vert  readme.md
Source/: Shader.cpp  Shader.h  main.cpp
include/glad/: glad.h
src/: glad.c
